established parents child relations in user & app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-user></app-user>
+
+<app-user (newAddDataEvent)="getUserData($event)" [Data]="userdata" (onAddAddress)="addAddressMssg($event)"
+    (onRemoveAddressEvent)="removeAddressMssg($event)"></app-user>
+
+<!-- <div *ngFor="let data of userdata">
+{{data}}
+</div> -->
