--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import "ag-grid-community/styles/ag-grid.css"; // Mandatory CSS required by the grid
+@import "ag-grid-community/styles/ag-theme-quartz.css"; // Optional Theme applied to the grid
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
 
 body{
     overflow-x: hidden;
 }
+
+
+
+
