--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
  <app-user (newAddDataEvent)="getUserData($event)" [Data]="this.userdata" (onAddAddress)="addAddressMssg($event)"
      (onRemoveAddressEvent)="removeAddressMssg($event)"></app-user> 
 
+<app-authentication></app-authentication>
