--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -132,7 +132,7 @@
 <div class="my-3">
     <h2 class="text-center my-3">Data</h2>
     <div class="d-flex justify-content-center">
-        <ag-grid-angular style="width: 45%; height: 300px;" class="ag-theme-alpine " [rowData]="Data"
+        <ag-grid-angular style="width: 45%; height: 300px;" class="ag-theme-alpine " [rowData]="userData"
             [columnDefs]="columnDefs" [pagination]="true" [defaultColDef]="defaultCols">
         </ag-grid-angular>
     </div>
