--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
- <app-user (newAddDataEvent)="getUserData($event)" [Data]="this.userdata" (onAddAddress)="addAddressMssg($event)"
-     (onRemoveAddressEvent)="removeAddressMssg($event)"></app-user> 
+<!-- <app-user (newAddDataEvent)="getUserData($event)" [Data]="this.userdata" (onAddAddress)="addAddressMssg($event)"
+    (onRemoveAddressEvent)="removeAddressMssg($event)"></app-user> -->
+<router-outlet></router-outlet>
 
-<app-authentication></app-authentication>
